Updated UserServiceImpl to return ResponseEntity<Response> for all methods.